<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.7"
        android:src="@drawable/signupbackground">
    </ImageView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="230dp">

                <ImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="56dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:src="@drawable/blueheart"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/change_photo"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="100dp"
                    android:alpha="0.7"
                    android:background="@drawable/bt_select"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/change_photo"
                    android:textColor="@color/colorWhite"
                    android:textSize="8pt"
                    android:onClick="onChangePhotoClicked"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_begin="205dp"
                    app:layout_constraintGuide_percent="0.5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleButton"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorLightTurquoise"
                    android:fontFamily="sans-serif-smallcaps"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="5"
                    android:text="@string/maleButtonText"
                    android:textColor="@color/colorWhite"
                    android:textSize="7pt" />

                <RadioButton
                    android:id="@+id/femaleButton"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorLightTurquoise"
                    android:fontFamily="sans-serif-smallcaps"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="5"
                    android:text="@string/femaleButtonText"
                    android:textColor="@color/colorWhite"
                    android:textSize="7pt" />

                <RadioButton
                    android:id="@+id/nonBinaryButton"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorLightTurquoise"
                    android:fontFamily="sans-serif-smallcaps"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="5"
                    android:text="@string/nonBinaryButtonText"
                    android:textColor="@color/colorWhite"
                    android:textSize="7pt" />

            </RadioGroup>


            <EditText
                android:id="@+id/name"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:alpha="0.7"
                android:background="@drawable/et_style"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="9pt"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name"
                 />

            <EditText
                android:id="@+id/emailAddress"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_style"
                android:alpha="0.7"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:fontFamily="sans-serif-smallcaps"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/emailAddress"/>



            <EditText
                android:id="@+id/password"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/et_style"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/colorWhite"
                android:alpha="0.7"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"/>
            <EditText
                android:id="@+id/major"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:background="@drawable/et_style"
                android:textColor="@color/colorWhite"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/major"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_marginTop="10dp"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:background="@drawable/et_style"
                android:textColor="@color/colorWhite"
                android:fontFamily="sans-serif-smallcaps"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/phone"/>

            <EditText
                android:id="@+id/classYear"
                android:layout_marginTop="10dp"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:background="@drawable/et_style"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/colorWhite"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/classyear"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:alpha="0.7"
                android:background="@drawable/bt_select"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="8pt"
                android:layout_gravity="center"
                android:onClick="onSubmitClicked"
                android:layout_marginBottom="30dp"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>